[gd_scene load_steps=22 format=3 uid="uid://bub02w5cgrlq"]

[ext_resource type="PackedScene" uid="uid://brvuj1qm0pohq" path="res://scenes/based_scenes/Units/FireElemental.tscn" id="1_gsat0"]
[ext_resource type="Texture2D" uid="uid://owxonpwtqenk" path="res://img/SpriteFireD.png" id="2_plb15"]
[ext_resource type="Script" uid="uid://dilyjlmqln5cd" path="res://scenes/units/elem_fire_big.gd" id="2_th5ik"]

[sub_resource type="AtlasTexture" id="AtlasTexture_th5ik"]
atlas = ExtResource("2_plb15")
region = Rect2(0, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sl0b"]
atlas = ExtResource("2_plb15")
region = Rect2(64, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x1av"]
atlas = ExtResource("2_plb15")
region = Rect2(128, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3top"]
atlas = ExtResource("2_plb15")
region = Rect2(192, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni3cr"]
atlas = ExtResource("2_plb15")
region = Rect2(256, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcxfv"]
atlas = ExtResource("2_plb15")
region = Rect2(320, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fjue"]
atlas = ExtResource("2_plb15")
region = Rect2(384, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_px138"]
atlas = ExtResource("2_plb15")
region = Rect2(448, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kwa8"]
atlas = ExtResource("2_plb15")
region = Rect2(0, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_44qwr"]
atlas = ExtResource("2_plb15")
region = Rect2(64, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wc3h"]
atlas = ExtResource("2_plb15")
region = Rect2(128, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0l0d"]
atlas = ExtResource("2_plb15")
region = Rect2(192, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_roagl"]
atlas = ExtResource("2_plb15")
region = Rect2(256, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoc40"]
atlas = ExtResource("2_plb15")
region = Rect2(320, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_etohk"]
atlas = ExtResource("2_plb15")
region = Rect2(384, 64, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wox0"]
atlas = ExtResource("2_plb15")
region = Rect2(448, 64, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_32ml3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th5ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sl0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x1av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3top")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni3cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcxfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fjue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px138")
}],
"loop": true,
"name": &"IdleL",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kwa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44qwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wc3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0l0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roagl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoc40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etohk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wox0")
}],
"loop": true,
"name": &"IdleR",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_plb15"]
radius = 479.026

[node name="ElemFireBig" instance=ExtResource("1_gsat0")]
safe_margin = 0.08
script = ExtResource("2_th5ik")
large_attack_dist = 100
small_attack_dist = 20
patrol_speed = 80.0
chase_speed = 240.0
patrol_wait_time = 1.0
search_duration = 5.0
dash_speed = 1000.0
dash_duration = 0.5
dash_cooldown = 2.0
attack_duration = 0.5
max_health = 200.0
attack_damage = 50.0
knockback_resistance = 0.8

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_32ml3")
animation = &"IdleR"

[node name="Hitbox" parent="." index="1"]
polygon = PackedVector2Array(14, 29, 24, 10, 22, -10, 10, -20, 10, -41, -11, -41, -11, -21, -22, -15, -24, 19, -9, 31)

[node name="CollisionShape2D" parent="ViewArea" index="0"]
position = Vector2(0, 0)
shape = SubResource("CircleShape2D_plb15")

[connection signal="body_entered" from="ViewArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="ViewArea" to="." method="_on_view_area_body_exited"]
